--- a/templates/base.html
+++ b/templates/base.html
@@ -69,9 +69,8 @@
       </div>
       <!-- Main Content -->
       <div class="main-content">
+        {% include 'message.html' %}
         {% block content %}
-
-
         {% endblock content %}
       </div>
       <footer class="main-footer" >
