--- a/templates/banner/detail.html
+++ b/templates/banner/detail.html
@@ -6,8 +6,8 @@
     <div class="section-body">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-primary text-white-all">
-            <li class="breadcrumb-item"><a href="#"></i> Asosiy</a></li>
-            <li class="breadcrumb-item"><a href="{% url 'banner_list' %}"> Banner ro'yxati</a></li>
+            <li class="breadcrumb-item"><a href="#">Asosiy</a></li>
+            <li class="breadcrumb-item"><a href="{% url 'banner_list' %}">Banner ro'yxati</a></li>
             <li class="breadcrumb-item">Banner</li>
           </ol>
         </nav>
@@ -17,118 +17,231 @@
             </div>
             <div class="card-body">
                 <div class="d-flex justify-content-center mb-4">
-                    <img src="{{banner.image.url}}" width="500px" height="300px" alt="rasm">
+                    <img src="{{ banner.image.url }}" width="500px" height="300px" alt="rasm">
                 </div>
-            <form action="{% url 'banner_edit' banner.uuid %}" method="POST" enctype="multipart/form-data" >
-                {% csrf_token %}
-                <div class="row mb-4">
-                    <div class="form-group col-12">
-                        <label>Rasm</label>
-                        <input type="file" class="form-control" name="image ">
+                <form action="{% url 'banner_edit' banner.uuid %}" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="row mb-4">
+                        <div class="form-group col-12">
+                            <label>Rasm</label>
+                            <input type="file" class="form-control" name="image">
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Inglizcha nomi</label>
+                            <input type="text" class="form-control" value="{{ banner.title_en }}" name="title_en">
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Ruscha nomi</label>
+                            <input type="text" class="form-control" value="{{ banner.title_ru }}" name="title_ru">
+                        </div>              
+                        <div class="form-group col-6">
+                            <label>Fransuzcha nomi</label>
+                            <input type="text" class="form-control" value="{{ banner.title_fr }}" name="title_fr">
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Nemischa nomi</label>
+                            <input type="text" class="form-control" value="{{ banner.title_de }}" name="title_de">
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Ispancha nomi</label>
+                            <input type="text" class="form-control" value="{{ banner.title_es }}" name="title_es">
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Yaratilgan sana</label>
+                            <input type="text" class="form-control" value="{{ banner.created_at }}" readonly>
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Inglizcha tavsifi</label>
+                            <textarea class="summernote" name="description_en">{{ banner.description_en }}</textarea>
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Ruscha tavsifi</label>
+                            <textarea class="summernote" name="description_ru">{{ banner.description_ru }}</textarea>
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Fransuzcha tavsifi</label>
+                            <textarea class="summernote" name="description_fr">{{ banner.description_fr }}</textarea>
+                        </div>
+                        <div class="form-group col-6">
+                            <label>Nemischa tavsifi</label>
+                            <textarea class="summernote" name="description_de">{{ banner.description_de }}</textarea>
+                        </div>
+                        <div class="form-group col-12">
+                            <label>Ispancha tavsifi</label>
+                            <textarea class="summernote" name="description_es">{{ banner.description_es }}</textarea>
+                        </div>
                     </div>
-                    <div class="form-group col-6">
-                        <label>Inglizcha nomi</label>
-                        <input type="text" class="form-control" value="{{banner.title_en}}" name="title_en">
+                    <div class="text-right">
+                        <button type="submit" class="btn btn-primary text-right"><i class="ion-android-cloud-done"></i> Saqlash</button>
                     </div>
-                    <div class="form-group col-6">
-                        <label>Ruscha nomi</label>
-                        <input type="text" class="form-control" value="{{banner.title_ru}}" name="title_ru">
-                    </div>              
-                    <div class="form-group col-6">
-                        <label>Fransuzcha nomi</label>
-                        <input type="text" class="form-control" value="{{banner.title_fr}}" name="title_fr">
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Nemischa nomi</label>
-                        <input type="text" class="form-control" value="{{banner.title_de}}" name="title_de">
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Ispancha nomi</label>
-                        <input type="text" class="form-control" value="{{banner.title_es}}" name="title_es">
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Yaratilgan sana</label>
-                        <input type="text" class="form-control" value="{{banner.created_at}}" readonly>
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Inglizcha tavsifi</label>
-                        <textarea class="summernote" name="description_en">{{banner.description_en}}</textarea >
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Ruscha tavsifi</label>
-                        <textarea class="summernote" name="description_ru">{{banner.description_ru}}</textarea >
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Fransuzcha tavsifi</label>
-                        <textarea class="summernote" name="description_fr">{{banner.description_fr}}</textarea >
-                    </div>
-                    <div class="form-group col-6">
-                        <label>Nemischa tavsifi</label>
-                        <textarea class="summernote" name="description_de" >{{banner.description_de}}</textarea >
-                    </div>
-                    <div class="form-group col-12">
-                        <label>Ispancha tavsifi</label>
-                        <textarea class="summernote" name="description_es">{{banner.description_es}}</textarea >
-                    </div>
-                </div>
-                <div class="text-right">
-                    <button type="submit" class="btn btn-primary text-right"><i class="ion-android-cloud-done"></i> Saqlash</button>
-                </div>
-            </form>
-             
+                </form>
             </div>
-          </div>
-          <div class="card">
-             <div class="card-header">
+        </div>
+        
+    </div>
+</section>
+<div class="card">
+            <div class="card-header">
                 <h4>Kichik bannerlar ro'yxati</h4>
                 <div class="card-header-action">
-                <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#createModal">
-                    <i class="ion-plus"></i> Yaratish
-                </a>
+                    <button class="btn btn-primary" data-toggle="modal" data-target="#createModal">
+                        <i class="ion-plus"></i> Yaratish
+                    </button>
                 </div>
             </div>
             <div class="card-body">
-                
-                <div class="row">
+                <style>
+                    .small-banner-card {
+                        border-radius: 15px;
+                        overflow: hidden;
+                        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+                        animation: fadeInUp 0.5s forwards;
+                    }
+                    .small-banner-card img {
+                        width: 100%;
+                        height: 200px;
+                        object-fit: cover;
+                        transition: transform 0.4s ease;
+                    }
+                    .small-banner-card:hover img {
+                        transform: scale(1.05);
+                    }
+                    .card-overlay {
+                        position: relative;
+                    }
+                    .overlay-text {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgba(0, 0, 0, 0.4);
+                        color: #fff;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        font-size: 16px;
+                        opacity: 0;
+                        transition: opacity 0.3s ease;
+                        text-align: center;
+                        padding: 10px;
+                    }
+                    .small-banner-card:hover .overlay-text {
+                        opacity: 1;
+                    }
+                    .overlay-text .btn {
+                        margin: 5px;
+                        font-size: 14px;
+                    }
+                    @keyframes fadeInUp {
+                        to {
+                            opacity: 1;
+                            transform: translateY(0);
+                        }
+                    }
+                </style>
+                <div class="row card-row" id="bannerRow">
                     {% for small_banner in small_banners %}
                     <div class="col-md-3">
-                        <img src="{{small_banner.image.url}}" alt="image" width="200px" height="180px">
+
+                      <div class="small-banner-card">
+                          <div class="card-overlay">
+                              <img src="{{ small_banner.image.url }}" alt="image">
+                              <div class="overlay-text">
+                                  <button class="btn btn-sm btn-warning" data-toggle="modal" data-target="#editModal{{ small_banner.uuid }}">
+                                      <i class="ion-android-create"></i>
+                                  </button>
+                                  <button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#deleteModal{{ small_banner.uuid }}">
+                                     <i class="ion-android-delete"></i>
+                                  </button>
+                              </div>
+                          </div>
+                      </div>
                     </div>
+
+                        <!-- Edit Modal -->
+                        <div class="modal fade" id="editModal{{ small_banner.uuid }}" tabindex="-1" role="dialog" aria-labelledby="editModalLabel{{ small_banner.uuid }}" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="editModalLabel{{ small_banner.uuid }}">Kichik bannerni tahrirlash</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form action="{% url 'SmallBanner_edit' small_banner.uuid %}" method="POST" enctype="multipart/form-data">
+                                        {% csrf_token %}
+                                        <div class="modal-body">
+                                            <div class="form-group">
+                                                <label>Rasm</label>
+                                                <input type="file" class="form-control" name="image">
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
+                                            <button type="submit" class="btn btn-primary"><i class="ion-android-cloud-done"></i> Saqlash</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Delete Modal -->
+                        <div class="modal fade" id="deleteModal{{ small_banner.uuid }}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel{{ small_banner.uuid }}" aria-hidden="true">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="deleteModalLabel{{ small_banner.uuid }}">Kichik bannerni o'chirish</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <form action="{% url 'SmallBanner_delete' small_banner.uuid %}" method="POST">
+                                        {% csrf_token %}
+                                        <div class="modal-body">
+                                            Kichik bannerni o'chirmoqchimisiz?
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
+                                            <button type="submit" class="btn btn-danger"><i class="ion-android-delete"></i> O'chirish</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     {% endfor %}
                 </div>
+
+                <!-- Create Modal -->
+                <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="createModalLabel">Kichik banner yaratish</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <form action="{% url 'SmallBanner_create' banner.uuid %}" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                <div class="modal-body">
+                                    <div class="form-group">
+                                        <label>Rasm</label>
+                                        <input type="file" class="form-control" name="image" required>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
+                                    <button type="submit" class="btn btn-primary"><i class="ion-plus"></i> Yaratish</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
-          </div>
-    </div>
-</section>
-
-<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <form action="{% url 'SmallBanner_create' banner.uuid %}" method="post" enctype="multipart/form-data">
-      {% csrf_token %}
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Kichik banner yaratish</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
         </div>
-        <div class="modal-body">
-          <div class="form-group">
-            <label>Image</label>
-            <input type="file" name="image">
-          </div>
-          <div class="form-group">
-            <label>Inglizcha nom</label>
-            <input type="text" class="form-control" required name="title_en">
-          </div>
-        </div>
-        <div class="modal-footer bg-whitesmoke br">
-          <button type="submit" class="btn btn-primary"><i class="ion-plus"></i> Yaratish</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Yopish</button>
-        </div>
-    </form>
-  </div>
-</div>
-
+                
 
 {% endblock content %}
