--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'banner_list' %}" class="nav-link">
                 <i data-feather="image"></i><span>Banner</span>
               </a>
             </li>
@@ -104,8 +104,8 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
-                <i data-feather="book"></i><span>Yo'riqnomalar</span>
+              <a href="{% url 'instructions_list' %}" class="nav-link">
+                <i data-feather="book"></i><span>Ko'rsatmalar</span>
               </a>
             </li>
             <li class="dropdown">
