--- a/templates/base.html
+++ b/templates/base.html
@@ -151,6 +151,7 @@
       
       <!-- Main Content -->
       <div class="main-content">
+        {% include 'message.html' %}
         {% block content %}
 
 
