--- a/templates/Instructions/list.html
+++ b/templates/Instructions/list.html
@@ -20,6 +20,7 @@
                 </div>
             </div>
             <div class="card-body">
+              {% if instructions %}
               <table class="table table-hover">
                 <thead>
                   <tr>
@@ -44,6 +45,12 @@
                   {% endfor %}
                 </tbody>
             </table>
+            {% else %}
+                <div class="d-flex justify-content-center align-items-center flex-column">
+                <img src="{% static 'img/image.png' %}" alt="" style="width: 50%; height: 50%; object-fit: cover;">
+                <h5 class="pb-4">Malumot topilmadi</h5>
+                </div>
+            {% endif %}
           </div>
         </div>
     </div>
