--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no" name="viewport">
+  <meta name="csrf-token" content="{{ csrf_token }}"> 
   <title>Otika - Admin Dashboard Template</title>
   <!-- General CSS Files -->
   <link rel="stylesheet" href="{% static 'assets/css/app.min.css' %}">
@@ -114,7 +115,7 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'comment_list' %}" class="nav-link">
                 <i data-feather="message-circle"></i><span>Izohlar</span>
               </a>
             </li>
