--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
               <a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
+              <a href="{% url 'company_info' %}" class="nav-link">
                 <i data-feather="share-2"></i><span>Ijtimoiy tarmoqlar</span>
               </a>
             </li>
