--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,13 @@
   <link rel="stylesheet" href="{% static 'assets/css/custom.css' %}">
   <link rel="stylesheet" href="{% static 'assets/bundles/ionicons/css/ionicons.min.css' %}">
 
+  <style>
+    table tr td img{
+      width: 60px !important;
+      height: 40px !important ;
+    }
+  </style>
+
 </head>
 
 <body>
