--- a/templates/Instructions/list.html
+++ b/templates/Instructions/list.html
@@ -12,7 +12,7 @@
         </nav>
         <div class="card">
             <div class="card-header">
-                <h4>Korsatma ro'yxati</h4>
+                <h4>Korsatmalar ro'yxati</h4>
                 <div class="card-header-action">
                 <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">
                     <i class="ion-plus"></i> Yaratish
