--- a/templates/base.html
+++ b/templates/base.html
@@ -72,23 +72,13 @@
               <a href="index.html" class="nav-link"><i data-feather="monitor"></i><span>Dashboard</span></a>
             </li>
             <li class="dropdown">
-              <a href="{% url 'company_info' %}" class="nav-link">
+              <a href="{% url 'social' %}" class="nav-link">
                 <i data-feather="share-2"></i><span>Ijtimoiy tarmoqlar</span>
               </a>
             </li>
             <li class="dropdown">
-              <a href="#" class="nav-link">
-                <i data-feather="message-square"></i><span>Aloqa</span>
-              </a>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="nav-link">
-                <i data-feather="briefcase"></i><span>Kompaniya ma'lumotlari</span>
-              </a>
-            </li>
-            <li class="dropdown">
-              <a href="{% url 'banner_list' %}" class="nav-link">
-                <i data-feather="image"></i><span>Banner</span>
+              <a href="{% url 'company_info' %}" class="nav-link">
+                <i data-feather="phone"></i><span>Bog'lanish</span>
               </a>
             </li>
             <li class="dropdown">
@@ -97,15 +87,22 @@
               </a>
             </li>
             <li class="dropdown">
-              <a href="{% url 'gallery_list' %}" class="nav-link">
-                <i data-feather="grid"></i><span>Galereya</span>
-              </a>
-            </li>
-            <li class="dropdown">
               <a href="{% url 'whyus' %}" class="nav-link">
                 <i data-feather="check-circle"></i><span>Nima uchun biz</span>
               </a>
             </li>
+            <li class="dropdown">
+              <a href="{% url 'banner_list' %}" class="nav-link">
+                <i data-feather="image"></i><span>Banner</span>
+              </a>
+            </li>
+            
+            <li class="dropdown">
+              <a href="{% url 'gallery_list' %}" class="nav-link">
+                <i data-feather="grid"></i><span>Galereya</span>
+              </a>
+            </li>
+            
             <li class="dropdown">
               <a href="{% url 'ourmission_list' %}" class="nav-link">
                 <i data-feather="target"></i><span>Bizning missiyamiz</span>
@@ -149,6 +146,11 @@
             <li class="dropdown">
               <a href="{% url 'trip_order_list' %}" class="nav-link">
                 <i data-feather="shopping-cart"></i><span>Sayohat buyurtmalari</span>
+              </a>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="nav-link">
+                <i data-feather="user"></i><span>Kontaktlar</span>
               </a>
             </li>
             
